envs/dev/ingestion/deployment-ingestion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion
  namespace: bitcert-attest
  labels:
    app.kubernetes.io/name: ingestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingestion
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingestion
    spec:
      containers:
      - name: ingestion
        image: ghcr.io/jbyee-test-org/bitcert/ingestion@sha256:bf0faeb9fdc1281523deafa109268a1dc6acfc259c6cf3282a62ecee66820229
        ports:
        - containerPort: 3008
