envs/dev/ingestion/service-ingestion.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion
  namespace: bitcert-attest
spec:
  selector:
    app.kubernetes.io/name: ingestion
  ports:
  - port: 3008
    targetPort: 3008
