envs/dev/ingestion/ingress-ingestion.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingestion
  namespace: bitcert-attest
  annotations:
    konghq.com/plugins: ingestion-ratelimit-0,ingestion-jwt-0
spec:
  ingressClassName: kong
  rules:
  - host: ingestion.dev.bitcert.test
    http:
      paths:
      - path: /attest/v1/attestations
        pathType: Prefix
        backend:
          service:
            name: ingestion
            port:
              number: 3008
